add section second

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import './components/button';
 @import './pages/authorization';
 @import './components/notification';
+@import './pages/application';
 html {
     height: 100%;
     font-size: 10px;
